--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,26 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  color: rgb(77, 77, 77)
+  color: white;
 }
 
 body {
+  margin: 0;
+  padding: 0;
   line-height: 1.5;
-  font-size: 2em;
-  display: flex;
+  font-size: 1em;
   flex-direction: column;
-  align-items: center;
+
+}
+
+#container {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
+}
+
+.grid-item {
+  background-color: rgb(77, 77, 77);
+  padding: 10px;
+  text-align: center;
+  flex: 6.25%;
 }
